hiding full screen button

--- a/src/methods/template.html
+++ b/src/methods/template.html
@@ -1,1 +1,6 @@
-<div class="chart-container">Dev Suite</div>
+<div class="chart-container">
+	<div class="button-row">
+    <button class="remove-button">remove dev-suite</button>
+		</div>
+	</div>
+</div>
