adding mode switch

--- a/src/methods/template.html
+++ b/src/methods/template.html
@@ -1,5 +1,12 @@
 <div class="chart-container">
-	<div class="button-row">
+	<div class="toolbar-row">
+		<div class="mode-switch-container">
+			grid mode
+			<label class="switch">
+				<span class="slider round"></span>
+			</label>
+			pixel mode
+		</div>
     <button class="remove-button">remove dev-suite</button>
 		</div>
 	</div>
