updating remove button text

--- a/src/methods/template.html
+++ b/src/methods/template.html
@@ -7,7 +7,7 @@
 			</label>
 			pixel mode
 		</div>
-    <button class="remove-button">remove dev-suite</button>
+    <button class="remove-button">Remove Dev-Suite</button>
 		</div>
 	</div>
 </div>
